# huggingface-for-beginner

./: hf__00.ipynb  pyproject.toml
