[project]
name = "hf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.50.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "hf", from = "src" }
]
